--- a/app/components/news.html
+++ b/app/components/news.html
@@ -1,6 +1,10 @@
 <section class="news">
   <div class="container">
-    <h2 class="title news__title">НАШИ НОВОСТИ</h2>
+    <div class="news__header">
+      <h2 class="title news__title">НАШИ НОВОСТИ</h2>
+      <a class="news__header-link" href="#">все новости</a>
+    </div>
+    
     <ul class="news__items">
       <li class="news__item">
         <article class="news__box">
