--- a/app/components/promo.html
+++ b/app/components/promo.html
@@ -1,4 +1,4 @@
-<section class="promo">
+<section class="promo" data-ref="promo">
   <div class="container">
     <h2 class="title promo__title">
       акции
@@ -10,12 +10,12 @@
         </button>
       </li>
       <li class="filter__item">
-        <button class="filter__btn" type="button" data-filter="new">
+        <button class="filter__btn" type="button" data-filter=".category-new">
           Новинки
         </button>
       </li>
       <li class="filter__item">
-        <button class="filter__btn" type="button" data-filter="hit">
+        <button class="filter__btn" type="button" data-filter=".category-hit">
           хиты
         </button>
       </li>
