--- a/app/components/top-products.html
+++ b/app/components/top-products.html
@@ -1,4 +1,4 @@
-<section class="top-products">
+<section class="top-products" data-ref="top-products">
       <div class="container">
         <h2 class="title top-products__title">
           Топовые товары
@@ -46,7 +46,7 @@
                 </button>
               </div>
               <a class="product-card__body" href="#">
-                <img class="product-card__img" src="images/top_product/pineapple.png" width="275" height="215"
+                <img class="product-card__img" src="images/top_product/pineapple.png"
                   alt="Ананас">
               </a>
               <h3 class="product-card__subtitle">
@@ -80,7 +80,7 @@
                 </button>
               </div>
               <a class="product-card__body" href="#">
-                <img class="product-card__img" src="images/top_product/lemon.png" width="275" height="215" alt="Лимон">
+                <img class="product-card__img" src="images/top_product/lemon.png" alt="Лимон">
               </a>
               <h3 class="product-card__subtitle">
                 Лимон, 1кг
@@ -112,7 +112,7 @@
                 </button>
               </div>
               <a class="product-card__body" href="#">
-                <img class="product-card__img" src="images/top_product/dragon.png" width="275" height="215"
+                <img class="product-card__img" src="images/top_product/dragon.png"
                   alt="Питахайя">
               </a>
               <h3 class="product-card__subtitle">
@@ -145,7 +145,7 @@
                 </button>
               </div>
               <a class="product-card__body" href="#">
-                <img class="product-card__img" src="images/top_product/paprik.png" width="275" height="215" alt="Перец">
+                <img class="product-card__img" src="images/top_product/paprik.png" alt="Перец">
               </a>
               <h3 class="product-card__subtitle">
                 Перец оранжевый, 1кг
@@ -177,7 +177,7 @@
                 </button>
               </div>
               <a class="product-card__body" href="#">
-                <img class="product-card__img" src="images/top_product/carrot.png" width="275" height="215"
+                <img class="product-card__img" src="images/top_product/carrot.png"
                   alt="Морковь">
               </a>
               <h3 class="product-card__subtitle">
@@ -210,7 +210,7 @@
                 </button>
               </div>
               <a class="product-card__body" href="#">
-                <img class="product-card__img" src="images/top_product/juice.png" width="275" height="215" alt="Сок">
+                <img class="product-card__img" src="images/top_product/juice.png" alt="Сок">
               </a>
               <h3 class="product-card__subtitle">
                 Напиток сокосодержащий Sanpellegrino Aranciata Orange Красный апельсин безалкогольный...
@@ -243,7 +243,7 @@
                 </button>
               </div>
               <a class="product-card__body" href="#">
-                <img class="product-card__img" src="images/top_product/coffee.png" width="275" height="215"
+                <img class="product-card__img" src="images/top_product/coffee.png"
                   alt="Кофе">
               </a>
               <h3 class="product-card__subtitle">
@@ -275,7 +275,7 @@
                 </button>
               </div>
               <a class="product-card__body" href="#">
-                <img class="product-card__img" src="images/top_product/ketchup.png" width="275" height="215" alt="кетчуп">
+                <img class="product-card__img" src="images/top_product/ketchup.png" alt="кетчуп">
               </a>
               <h3 class="product-card__subtitle">
                 Кетчуп томатный детский органический Bio-Zentrale 500мл
@@ -297,7 +297,7 @@
 
 
         </ul>
-        <button class="top-products__link link" type="button">Показать еще</button>
+        <button class="top-products__link link" type="button">Показать еще</button> 
 
         <section class="banners">
           <h2 class="sr-only">Акции</h2>
