--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -25,6 +25,12 @@ body {
   background-color: $white;
 }
 
+.body {
+  &--lock{
+    overflow: hidden;
+  }
+}
+
 .main {
   flex: 1 0 auto;
 }
@@ -39,10 +45,13 @@ body {
     height: 100%;
     object-fit: cover;
   }
+
+  &__img--l {
+    display: none;
+    min-width: 37px;
+    min-height: 40px;
+  }
 }
-
-
-
 
 .title {
   @include Signika(600);
@@ -76,7 +85,6 @@ body {
   }
 }
 
-
 .link {
     font-size: 18px;
     line-height: 1.3;
@@ -96,35 +104,6 @@ body {
       box-shadow: 0px 0px 0px 4px rgba(99, 166, 14, 0.5);
     }
   }
-
-  .filter {
-  display: flex;
-  justify-content: center;
-  margin: 0 auto 45px;
-  &__item {
-    &:not(:last-child) {
-      margin-right: 27px;
-    }
-  }
-
-  &__btn {
-    color: $dark-500;
-    @include Lato(700);
-    text-transform: uppercase;
-    font-size: 17px;
-    border-bottom: 3px solid transparent;
-    transition: border-bottom-color 0.3s;
-    &:hover {
-      border-bottom: 3px solid $green-200;
-    }
-
-    
-  }
-  .mixitup-control-active {
-    border-bottom: 3px solid $green-200;
-  }
-}
-
 
 .badge {
   display: block;
