--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -11,5 +11,6 @@ $red-900: #cf3e3b;
 $orange-900: #ff7a00;
 $yellow: #ffb800;
 $silver-600: #c1c1c1;
+$silver-200: #ebebeb;
 $silver-100: #f6f6f6;
 $white: #fff;
