--- a/app/scss/components/_advantages.scss
+++ b/app/scss/components/_advantages.scss
@@ -3,10 +3,11 @@
   justify-content: space-between;
   background-color: $silver-100;
   &__items {
-    padding: 48px;
+    padding: 48px 0 23px;
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-wrap: wrap;
   }
 
   &__item {
@@ -14,7 +15,7 @@
     width: 100%;
     padding-left: 75px;
     position: relative;
-    margin: 0 25px;
+    margin: 0 25px 25px;
     &::before{
       content: '';
       position: absolute;
@@ -54,5 +55,18 @@
 
   &__text {
     @include Lato(400);
+  }
+}
+
+@media (max-width:670px) {
+  .advantages {
+    &__items {
+      padding: 25px 0 0 0;
+      display: block;
+    }
+
+    &__item {
+      margin: 0 0 25px 10px;
+    }
   }
 }
