--- a/app/scss/components/_footer.scss
+++ b/app/scss/components/_footer.scss
@@ -3,7 +3,6 @@
   color: $white;
   &__head {
     padding: 30px 0;
-    
   }
 
   &__body {
@@ -52,10 +51,11 @@
 
   &__box {
     column-count: 3;
-    margin-left: 50px;
-    &-item {
-      
-    }
+  }
+
+  &__box-item {
+    margin-bottom: 15px;
+    display: block;
   }
 
   &__link {
@@ -115,6 +115,45 @@
     &-img{
       width: 32px;
       height: 32px;
+    }
+  }
+}
+
+@media (max-width: 1200px) {
+  .footer {
+    &__body {
+      flex-wrap: wrap;
+    }
+
+    &__newsletter {
+      margin-bottom: 30px;
+    }
+
+    &__menu {
+      margin-bottom: 30px;
+    }
+  }
+}
+
+@media (max-width: 870px) {
+  .footer {
+    text-align: center;
+    flex-direction: column;
+    &__body {
+      flex-direction: column;
+      align-items: center;
+    }
+
+    &__box {
+      text-align: left;
+    }
+  }
+}
+
+@media (max-width: 670px) {
+  .footer {
+    &__box {
+      column-count: 2;
     }
   }
 }
