--- a/app/scss/components/_promo.scss
+++ b/app/scss/components/_promo.scss
@@ -41,7 +41,6 @@
   text-align: left;
   display: flex;
   
-    
 		&__box {
       margin-right: 12px;
 		}
@@ -104,7 +103,6 @@
     }
 
     &__oldprice {
-    
       color: $silver-600;
       position: relative;
       font-size: 12px;
@@ -135,4 +133,24 @@
       max-width: 40px;
       width: 100%;
     }
+}
+
+@media (max-width: 870px) {
+  .promo {
+    padding: 30px 0;
+
+    &__title {
+      margin-bottom: 10px;
+    }
+
+    &__filter {
+      margin-bottom: 10px;
+    }
+
+    &__item {
+      max-width: 450px;
+      padding: 13px 25px;
+      margin-bottom: 10px;
+    }
+  }
 }
